# gitbrowser-rs

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/actions/: pull-request.js
.github/workflows/: publish.yml  pull-request.yml  release.yml  test.yml
src/: app.rs  display.rs  errors.rs  main.rs  test_main.rs  traits.rs  tui.rs  ui.rs
src/app/: blob_pager.rs  external_editor.rs  navigation.rs  pagination.rs  refs_page.rs  tree_page.rs
