[package]
name = "gitbrowser-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
git2 = { version = "0.19.0", default-features = false }
ratatui = "0.26.3"
tempfile = "3.10.1"
