[package]
name = "gitbrowser-rs"
description = "A basic TUI git repository browser without needing to check out the revision being browsed."
version = "0.1.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
git2 = { version = "0.19.0", default-features = false }
ratatui = "0.26.3"
syntect = "5.2.0"
tempfile = "3.10.1"
two-face = { version = "0.4.0", features = ["syntect-default-onig"] }

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimisation in Development mode.
opt-level = 1
